--- a/go-service/build.yaml
+++ b/go-service/build.yaml
@@ -1,7 +1,7 @@
 apiVersion: build.knative.dev/v1alpha1
 kind: Build
 metadata:
-  name: kaniko-build
+  name: helloword-go-service-build
 spec:
   serviceAccountName: build-bot
   source:
