--- a/autoscale-go-service.yaml
+++ b/autoscale-go-service.yaml
@@ -11,6 +11,7 @@ spec:
           annotations:
             # Target 10 in-flight-requests per pod.
             autoscaling.knative.dev/target: "10"
+            autoscaling.knative.dev/minScale: "0"
         spec:
           container:
             image: gcr.io/knative-samples/autoscale-go:0.1
